--- a/index.html
+++ b/index.html
@@ -394,6 +394,15 @@
             <img src="assets/love.svg" alt="" class="testimonials__img">
           </figure>
           <div class="testimonials__header">
+            <div class="feedback__navigation--arrows">
+              <button class="feedback__navigation--btn pre-btn">
+                <i class="fas fa-arrow-left feedback__navigation--arrow purple"></i>
+              </button>
+              <div class="feedback__navigation--divider"></div>
+              <button class="feedback__navigation--btn nxt-btn">
+                <i class="fas fa-arrow-right feedback__navigation--arrow purple"></i>
+              </button>
+            </div>
             <h5 class="testimonials__header--h5"><span class="purple h5__span testimonials">TESTIMONIALS</span></h5>
             <h2 class="testimonials__header--h2">
               Our Clients
@@ -403,69 +412,53 @@
               eiusmod tempor
               incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
             <div class="header__feedback--wrapper">
-              <div class="header__feedback">
-                <figure class="feedback__star--wrapper">
-                  <img src="assets/stars.png" alt="" class="testimonials__star">
-                </figure>
-                <h3 class="feedback__h3">Love the Developer Experience and Design Principles!</h3>
-                <p class="feedback__para">Sinor Duis aute dolor in reprehenderit in voluptate velit esse cillum dolore
-                  eu
-                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non gproident, sunt in culpa qui officia.
-                  Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore
-                  magn aliqua. Ut enim ad minim veniam.</p>
-                <div class="feedback__navigation">
-                  <div class="feedback__profile">
-                    <figure class="feedback__img--wrapper">
-                      <img class="feedback__img" src="assets/adam.avif" alt="">
-                    </figure>
-                    <div class="feedback__profile--description">
-                      <h5 class="feedback__profile--h5">Adam Cuppy</h5>
-                      <p class="feedback__profile--para">Founder, EventsNYC</p>
+              <div class="header__feedback--wrap">
+                <div class="header__feedback">
+                  <figure class="feedback__star--wrapper">
+                    <img src="assets/stars.png" alt="" class="testimonials__star">
+                  </figure>
+                  <h3 class="feedback__h3">Amazing User Experience</h3>
+                  <p class="feedback__para">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proidnet, sunt in culpa qui officia.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                  <div class="feedback__navigation">
+                    <div class="feedback__profile">
+                      <figure class="feedback__img--wrapper">
+                        <img class="feedback__img" src="assets/charlotte.avif" alt="">
+                      </figure>
+                      <div class="feedback__profile--description">
+                        <h5 class="feedback__profile--h5">Charlotte Hale</h5>
+                        <p class="feedback__profile--para">Director, Delos Inc.</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="feedback__navigation--arrows">
-                    <button class="feedback__navigation--btn pre-btn">
-                      <i class="fas fa-arrow-left feedback__navigation--arrow purple"></i>
-                    </button>
-                    <div class="feedback__navigation--divider"></div>
-                    <button class="feedback__navigation--btn nxt-btn">
-                      <i class="fas fa-arrow-right feedback__navigation--arrow purple"></i>
-                    </button>
                   </div>
                 </div>
               </div>
-              <div class="header__feedback">
-                <figure class="feedback__star--wrapper">
-                  <img src="assets/stars.png" alt="" class="testimonials__star">
-                </figure>
-                <h3 class="feedback__h3">Love the Developer Experience and Design Principles!</h3>
-                <p class="feedback__para">Sinor Duis aute dolor in reprehenderit in voluptate velit esse cillum dolore
-                  eu
-                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non gproident, sunt in culpa qui officia.
-                  Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore
-                  magn aliqua. Ut enim ad minim veniam.</p>
-                <div class="feedback__navigation">
-                  <div class="feedback__profile">
-                    <figure class="feedback__img--wrapper">
-                      <img class="feedback__img" src="assets/adam.avif" alt="">
-                    </figure>
-                    <div class="feedback__profile--description">
-                      <h5 class="feedback__profile--h5">Adam Cuppy</h5>
-                      <p class="feedback__profile--para">Founder, EventsNYC</p>
+              <div class="header__feedback--wrap">
+                <div class="header__feedback">
+                  <figure class="feedback__star--wrapper">
+                    <img src="assets/stars.png" alt="" class="testimonials__star">
+                  </figure>
+                  <h3 class="feedback__h3">Love the Developer Experience and Design Principles !</h3>
+                  <p class="feedback__para">Sinor Duis aute dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non gproident, sunt in culpa qui officia.
+                    Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore
+                    magn aliqua. Ut enim ad minim veniam.</p>
+                  <div class="feedback__navigation">
+                    <div class="feedback__profile">
+                      <figure class="feedback__img--wrapper">
+                        <img class="feedback__img" src="assets/adam.avif" alt="">
+                      </figure>
+                      <div class="feedback__profile--description">
+                        <h5 class="feedback__profile--h5">Adam Cuppy</h5>
+                        <p class="feedback__profile--para">Founder, EventsNYC</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="feedback__navigation--arrows">
-                    <button class="feedback__navigation--btn pre-btn">
-                      <i class="fas fa-arrow-left feedback__navigation--arrow purple"></i>
-                    </button>
-                    <div class="feedback__navigation--divider"></div>
-                    <button class="feedback__navigation--btn nxt-btn">
-                      <i class="fas fa-arrow-right feedback__navigation--arrow purple"></i>
-                    </button>
+
                   </div>
                 </div>
               </div>
@@ -473,11 +466,35 @@
           </div>
         </div>
       </div>
+      <script src="script.js"></script>
+    </section>
+    <section id="faqs">
+      <div class="row">
+        <div class="faqs__container">
+          <div class="faqs__header">
+            <h5 class="faqs__header--h5"><span class="purple h5__span faqs">FAQS</span></h5>
+            <h2 class="testimonials__header--h2">
+              You have
+              <span class="purple">Questions ?</span>
+            </h2>
+            <p class="faqs__header--para">And we have got answers to all of them. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit.</p>
+          </div>
+<div class="faqs__questions">
+  <div class="faqs__question--wrap">
+    <div class="faqs__question">
+<h3 class="faqs__question--h3"> Are all the templates easily customizable ?</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="faqs__question--arrow"><polyline points="6 9 12 15 18 9"></polyline></svg>
+    </div>
+  </div>
+</div>
+        </div>
+      </div>
     </section>
 
 
+
   </div>
-  <script src="script.js"></script>
 </body>
 
 </html>
