--- a/index.html
+++ b/index.html
@@ -613,7 +613,9 @@
                     <polyline points="6 9 12 15 18 9"></polyline>
                   </svg>
                   <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, quisquam.</p>
+                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                   </div>
                 </div>
               </div>
