--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css" />
 <script src="script3.js"></script>
 <script defer src="script4.js"></script>
+<script defer src="script5.js"></script>
 </head>
 
 <body>
@@ -137,7 +138,7 @@
       </header>
     </section>
     <main>
-      <section id="features" class="hidden">
+      <section id="features" class="hidden2">
         <div class="row">
           <div class="features__container">
             <h5>
@@ -261,7 +262,7 @@
         </div>
       </section>
 
-      <section id="steps" class="hidden">
+      <section id="steps" class="hidden2">
         <div class="row">
           <div class="steps__container">
             <figure class="steps__img--wrapper">
@@ -351,7 +352,7 @@
         </div>
       </section>
 
-      <section id="pricing" class="hidden">
+      <section id="pricing" class="hidden2">
         <div class="row">
           <div class="pricing__container">
             <div class="pricing__header">
@@ -516,7 +517,7 @@
         </div>
         <script src="script.js"></script>
       </section>
-      <section id="faqs" class="hidden">
+      <section id="faqs" class="hidden2">
         <div class="row">
           <div class="faqs__container">
             <div class="faqs__header">
@@ -640,7 +641,7 @@
       </section>
     </main>
   </div>
-  <footer id="footer" class="hidden">
+  <footer id="footer" class="hidden2">
     <div class="row">
       <div class="footer__container">
         <div class="footer__columns">
