--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Treact</title>
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
-<script src="script3.js"></script>
-<script defer src="script4.js"></script>
-<script defer src="script5.js"></script>
+  <script src="script3.js"></script>
+  <script defer src="script4.js"></script>
+  <script defer src="script5.js"></script>
 </head>
 
 <body>
@@ -18,16 +18,16 @@
       <nav>
         <div class="row">
           <div class="nav__container">
-             <button class="btn__menu--open" onclick="openMenu ()">
+            <button class="btn__menu--open" onclick="openMenu ()">
               <i class="fas fa-bars"></i>
-             </button>
-             <div class="menu__backdrop">
+            </button>
+            <div class="menu__backdrop">
               <button class="btn__menu--close" onclick="closeMenu ()">
                 <i class="fas fa-times"></i>
-               </button>
+              </button>
               <ul class="nav__links mobile">
                 <li class="nav__link mobile">
-                  <a href="" class="nav__link--anchor"  >
+                  <a href="" class="nav__link--anchor">
                     About
                     <div class="nav__link--underline"></div>
                   </a>
@@ -60,7 +60,7 @@
                   <a href="" class="nav__link--anchor--sign-up"> Sign Up </a>
                 </li>
               </ul>
-             </div>
+            </div>
             <a href="#" class="nav__logo--area">
               <img class="nav__logo--img" src="assets/treact logo.svg" alt="" />
               <span class="nav__logo--text">Treact</span>
@@ -530,96 +530,109 @@
                 consectetur adipiscing elit.</p>
             </div>
             <div class="faqs__questions">
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
                   <h3 class="faqs__question--h3"> Are all the templates easily customizable ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Yes, they all are. Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Yes, they all are. Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
-                  <h3 class="faqs__question--h3"> How long do you usually support an standalone template for ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h3 class="faqs__question--h3"> How long do you usually support a standalone template for ?</h3>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
                   <h3 class="faqs__question--h3"> What kind of payment methods do you accept ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
                   <h3 class="faqs__question--h3"> Is there a subscription service to get the latest templates ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
                   <h3 class="faqs__question--h3"> Are the templates compatible with the React ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
-              <div class="faqs__question--wrap">
+              <div class="faqs__question__wrap">
                 <div class="faqs__question">
                   <h3 class="faqs__question--h3"> Do you really support Internet Explorer 11 ?</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="faqs__question--arrow">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                  </svg>
-                  <div class="faqs__answer">
-                    <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <div class="question__arrow--wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="faqs__question--arrow">
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                   </div>
                 </div>
+                <div class="faqs__answer">
+                  <p class="faqs__answer--para"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
               </div>
+
             </div>
           </div>
         </div>
